[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spankux"
version = "0.1.0"
description = "Slap your laptop, it yells back."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["sounddevice", "numpy"]

[project.scripts]
spankux = "spankux:main"
calibrate-spankux = "calibrate:main"

[tool.setuptools]
py-modules = ["spankux", "calibrate"]
